Update CraftBook5 to Java 16 & MC1.17 (as min version)