@@ -2,7 +2,7 @@
 set -e
 
 # For snapshots, please specify the full version (with date and time)
-cdist_version="0.1.0-20201002.083956-2"
+cdist_version="0.1.0-20210612.072458-9"
 cdist_path_version="$cdist_version"
 
 if [ -n "${cdist_version#*-}" ]; then
@@ -17,6 +17,8 @@ curl "$url" >./build/cdist.zip
 export CROWDIN_DISTRIBUTOR_ON_CHANGE="true"
 export CROWDIN_DISTRIBUTOR_PROJECT_ID="414990"
 export CROWDIN_DISTRIBUTOR_MODULE="craftbook-lang"
+## Full path to the source file, will be uploaded to crowdin, must already have uploaded at least once (will not create a new file)
+export CROWDIN_DISTRIBUTOR_SOURCE_FILE="./craftbook-core/src/main/resources/lang/strings.json"
 # Artifactory & Build Number is set by CI
-export CROWDIN_DISTRIBUTOR_OPTS="--enable-preview"
+export CROWDIN_DISTRIBUTOR_OPTS=""
 "./build/crowdin-distributor-$cdist_path_version/bin/crowdin-distributor"
